--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -11,10 +11,12 @@ OR EDIT THIS ONE ACCORDING TO THE WIKI INSTRUCTIONS.
 # For a full list, see the wiki (basic and advanced configuring)
 #
 
-monitor=DP-3,2560x1440@165,1920x0,1
-workspace=DP-3,1
+monitor=DP-1,2560x1440@165,1920x0,1
+workspace=DP-1,1
+workspace=DP-1,3
 monitor=HDMI-A-1,1920x1080@60,0x360,1
 workspace=HDMI-A-1,2
+workspace=HDMI-A-1,4
 
 input {
     kb_layout=us,ru
@@ -45,10 +47,10 @@ general {
 
 decoration {
     rounding=10
-    blur=1
-    blur_size=3 # minimum 1
-    blur_passes=1 # minimum 1
-    blur_new_optimizations=1
+    #blur=yes
+    #blur_size=3 # minimum 1
+    #blur_passes=1 # minimum 1
+    #blur_new_optimizations=on
 }
 
 animations {
@@ -70,8 +72,10 @@ gestures {
 # window rules
 windowrule=float,(.)
 #windowrule=tile,title:(Mozilla Firefox)
-#windowrule=tile,title:(Visual Studio Code)
-windowrule=tile,title:(discord)
+windowrule=tile,title:(Visual Studio Code)
+windowrule=tile,class:jetbrains-clion
+windowrule=tile,class:jetbrains-pycharm
+#windowrule=tile,title:(discord)
 windowrule=tile,title:(Google Chrome)
 #windowrule=tile,title:(Postman)
 #windowrule=tile,title:(Spotify)
@@ -83,13 +87,13 @@ windowrule=tile,title:(Google Chrome)
 exec-once=hyprpaper
 exec-once=bash ~/.config/swaylock/config.sh
 exec-once=waybar
-exec-once=swaync
+#exec-once=swaync
 
 # example binds
 bind=SUPER,Return,exec,alacritty -e zsh
 bind=SUPERSHIFT,Return,exec,alacritty -e zsh
 bind=SUPER,Q,killactive
-bind=SUPER,SHIFT E,exit
+#bind=SUPER,SHIFT E,exit
 bind=SUPER,f,fullscreen,
 bind=SUPER,d,exec,wofi --show=drun --show-icons
 bind=SUPER,l,exec,bash ~/.config/swaylock/config.sh
@@ -140,5 +144,14 @@ bind=,Print,exec,grim $HOME/Screenshots/capture-$(date +%Y-%m-%d_%H-%m-%s).png
 bind=SUPER,Print,exec,grim -g "$(slurp)" $HOME/Images/capture-$(date +%Y-%m-%d_%H-%m-%s).png
 
 windowrule=workspace 2, Google-chrome
+windowrule=workspace 3, Code
+windowrule=workspace 3, jetbrains-pycharm
+windowrule=workspace 3, jetbrains-clion
 windowrule=workspace 4,discord
 windowrule=workspace 4, org.telegram.desktop
+
+env = LIBVA_DRIVER_NAME,nvidia
+env = XDG_SESSION_TYPE,wayland
+env = GDM_BACKEND,nvidia-drm
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = WLR_NO_HARDWARE_CURSORS,1
