--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -11,12 +11,14 @@ OR EDIT THIS ONE ACCORDING TO THE WIKI INSTRUCTIONS.
 # For a full list, see the wiki (basic and advanced configuring)
 #
 
-monitor=DP-1,2560x1440@165,1920x0,1
-workspace=DP-1,1
-workspace=DP-1,3
-monitor=HDMI-A-1,1920x1080@60,0x360,1
-workspace=HDMI-A-1,2
-workspace=HDMI-A-1,4
+monitor=eDP-1, 1920x1080@60,0x0,1
+#monitor=DP-1,2560x1440@165,1920x0,1
+#workspace=DP-1,1
+#workspace=DP-1,3
+#monitor=HDMI-A-1,1920x1080@60,0x0,1
+#workspace=HDMI-A-1,2
+#workspace=HDMI-A-1,4
+monitor=HDMI-A-2,1920x1080@60,0x0,1,mirror,eDP-1
 
 input {
     kb_layout=us,ru
@@ -104,6 +106,7 @@ bindm=SUPER,mouse:272,movewindow
 bindm=SUPER,mouse:273,resizewindow
 bind=SUPERSHIFT,c,exec,hyprctl reload
 bind=SUPER,b,exec,google-chrome-stable
+bind=SUPER SHIFT,l,exec,swaylock
 
 bind=SUPER,left,movefocus,l
 bind=SUPER,right,movefocus,r
@@ -132,13 +135,13 @@ bind=SUPER SHIFT,8,movetoworkspace,8
 bind=SUPER SHIFT,9,movetoworkspace,9
 bind=SUPER SHIFT,0,movetoworkspace,10
 
-bind=,XF86AudioRaiseVolume,exec,volumectl -u up
-bind=,XF86AudioLowerVolume,exec,volumectl -u down
-bind=,XF86AudioMute,exec,volumectl toggle-mute
-bind=,XF86AudioMicMute,exec,volumectl -m toggle-mute
+bind=,XF86AudioRaiseVolume,exec,volumectl up
+bind=,XF86AudioLowerVolume,exec,volumectl down
+bind=,XF86AudioMute,exec,volumectl toggle
+bind=,XF86AudioMicMute,exec,volumectl -m toggle
 
-bind=,XF86MonBrightnessUp,exec,lightctl up
-bind=,XF86MonBrightnessDown,exec,lightctl down
+bind=,XF86MonBrightnessUp,exec,brightnessctl s +10%
+bind=,XF86MonBrightnessDown,exec,brightnessctl s 10%-
 
 bind=,Print,exec,grim $HOME/Screenshots/capture-$(date +%Y-%m-%d_%H-%m-%s).png
 bind=SUPER,Print,exec,grim -g "$(slurp)" $HOME/Images/capture-$(date +%Y-%m-%d_%H-%m-%s).png
@@ -147,6 +150,7 @@ windowrule=workspace 2, Google-chrome
 windowrule=workspace 3, Code
 windowrule=workspace 3, jetbrains-pycharm
 windowrule=workspace 3, jetbrains-clion
+windowrule=workspace 3, jetbrains-rustrover
 windowrule=workspace 4,discord
 windowrule=workspace 4, org.telegram.desktop
 
