Major update for niggas

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -18,7 +18,7 @@ monitor=eDP-1, 1920x1080@60,0x0,1
 #monitor=HDMI-A-1,1920x1080@60,0x0,1
 #workspace=HDMI-A-1,2
 #workspace=HDMI-A-1,4
-monitor=HDMI-A-2,1920x1080@60,0x0,1,mirror,eDP-1
+monitor=HDMI-A-1,1920x1080@60,0x0,1,mirror,eDP-1
 
 input {
     kb_layout=us,ru
@@ -71,14 +71,24 @@ gestures {
     workspace_swipe=yes
 }
 
+#startup
+exec-once=alacritty -e btop
+exec-once=alacritty -e neofetch
+exec-once=alacritty -e ranger
+
 # window rules
 windowrule=float,(.)
 #windowrule=tile,title:(Mozilla Firefox)
 windowrule=tile,title:(Visual Studio Code)
 windowrule=tile,class:jetbrains-clion
 windowrule=tile,class:jetbrains-pycharm
+windowrule=tile,class:jetbrains-goland
+windowrule=tile,class:jetbrains-webstorm
+windowrule=tile,class:jetbrains-rustrover
+windowrule=tile,class:jetbrains-fleet
 #windowrule=tile,title:(discord)
 windowrule=tile,title:(Google Chrome)
+windowrule=tile,title:(Mozilla Firefox)
 #windowrule=tile,title:(Postman)
 #windowrule=tile,title:(Spotify)
 #windowrule=tile,title:(DBeaver)
@@ -86,6 +96,7 @@ windowrule=tile,title:(Google Chrome)
 
 # exec on startup
 #exec-once=avizo-service
+exec-once=dbus-update-activation-environment --all
 exec-once=hyprpaper
 exec-once=bash ~/.config/swaylock/config.sh
 exec-once=waybar
@@ -99,7 +110,7 @@ bind=SUPER,Q,killactive
 bind=SUPER,f,fullscreen,
 bind=SUPER,d,exec,wofi --show=drun --show-icons
 bind=SUPER,l,exec,bash ~/.config/swaylock/config.sh
-bind=SUPER SHIFT, F,exec,nautilus
+bind=SUPER SHIFT, F,exec,thunar
 bind=SUPER,n,exec,swaync-client -t -sw
 bind=SUPER,space,togglefloating,
 bindm=SUPER,mouse:272,movewindow
@@ -135,6 +146,11 @@ bind=SUPER SHIFT,8,movetoworkspace,8
 bind=SUPER SHIFT,9,movetoworkspace,9
 bind=SUPER SHIFT,0,movetoworkspace,10
 
+bind=SUPERSHIFT,left,movewindow,l
+bind=SUPERSHIFT,down,movewindow,d
+bind=SUPERSHIFT,up,movewindow,u
+bind=SUPERSHIFT,right,movewindow,r
+
 bind=,XF86AudioRaiseVolume,exec,volumectl up
 bind=,XF86AudioLowerVolume,exec,volumectl down
 bind=,XF86AudioMute,exec,volumectl toggle
@@ -147,11 +163,12 @@ bind=,Print,exec,grim $HOME/Screenshots/capture-$(date +%Y-%m-%d_%H-%m-%s).png
 bind=SUPER,Print,exec,grim -g "$(slurp)" $HOME/Images/capture-$(date +%Y-%m-%d_%H-%m-%s).png
 
 windowrule=workspace 2, Google-chrome
+windowrule=workspace 2, firefox
 windowrule=workspace 3, Code
 windowrule=workspace 3, jetbrains-pycharm
 windowrule=workspace 3, jetbrains-clion
 windowrule=workspace 3, jetbrains-rustrover
-windowrule=workspace 4,discord
+windowrule=workspace 4, discord
 windowrule=workspace 4, org.telegram.desktop
 
 env = LIBVA_DRIVER_NAME,nvidia
