--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -32,10 +32,11 @@ input {
     sensitivity=0 # -1.0 - 1.0, 0 means no modification.
 }
 
+exec-once=hyprpaper
+
 $main_mod=SUPER
 general {
     max_fps=60
-
     gaps_in=10
     gaps_out=20
     border_size=2
@@ -72,9 +73,9 @@ gestures {
 }
 
 #startup
-exec-once=alacritty -e btop
-exec-once=alacritty -e neofetch
-exec-once=alacritty -e ranger
+#exec-once=alacritty -e btop
+#exec-once=alacritty -e neofetch
+#exec-once=alacritty -e ranger
 
 # window rules
 windowrule=float,(.)
@@ -82,10 +83,10 @@ windowrule=float,(.)
 windowrule=tile,title:(Visual Studio Code)
 windowrule=tile,class:jetbrains-clion
 windowrule=tile,class:jetbrains-pycharm
-windowrule=tile,class:jetbrains-goland
-windowrule=tile,class:jetbrains-webstorm
-windowrule=tile,class:jetbrains-rustrover
-windowrule=tile,class:jetbrains-fleet
+#windowrule=tile,class:jetbrains-goland
+#windowrule=tile,class:jetbrains-webstorm
+#windowrule=tile,class:jetbrains-rustrover
+#windowrule=tile,class:jetbrains-fleet
 #windowrule=tile,title:(discord)
 windowrule=tile,title:(Google Chrome)
 windowrule=tile,title:(Mozilla Firefox)
@@ -97,7 +98,6 @@ windowrule=tile,title:(Mozilla Firefox)
 # exec on startup
 #exec-once=avizo-service
 exec-once=dbus-update-activation-environment --all
-exec-once=hyprpaper
 exec-once=bash ~/.config/swaylock/config.sh
 exec-once=waybar
 #exec-once=swaync
