--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -11,14 +11,15 @@ OR EDIT THIS ONE ACCORDING TO THE WIKI INSTRUCTIONS.
 # For a full list, see the wiki (basic and advanced configuring)
 #
 
-monitor=eDP-1, 1920x1080@60,0x0,1
-#monitor=DP-1,2560x1440@165,1920x0,1
-#workspace=DP-1,1
-#workspace=DP-1,3
-#monitor=HDMI-A-1,1920x1080@60,0x0,1
-#workspace=HDMI-A-1,2
-#workspace=HDMI-A-1,4
-monitor=HDMI-A-1,1920x1080@60,0x0,1,mirror,eDP-1
+#monitor=eDP-1, 1920x1080@60,0x0,1
+monitor=DP-1,2560x1440@165,1920x0,1
+workspace=DP-1,1
+workspace=DP-1,3
+monitor=HDMI-A-1,1920x1080@60,0x360,1
+#monitor=HDMI-A-1,disable
+workspace=HDMI-A-1,2
+workspace=HDMI-A-1,4
+#monitor=HDMI-A-1,1920x1080@60,0x0,1,mirror,eDP-1
 
 input {
     kb_layout=us,ru
@@ -36,7 +37,7 @@ exec-once=hyprpaper
 
 $main_mod=SUPER
 general {
-    max_fps=60
+    #max_fps=60
     gaps_in=10
     gaps_out=20
     border_size=2
@@ -50,7 +51,7 @@ general {
 
 decoration {
     rounding=10
-    #blur=yes
+    #blur=1
     #blur_size=3 # minimum 1
     #blur_passes=1 # minimum 1
     #blur_new_optimizations=on
