--- a/waybar/config
+++ b/waybar/config
@@ -1,91 +1,112 @@
 {
-    "modules-left": ["custom/arch", "hyprland/workspaces"],
-    "modules-center": [],
-    "modules-right": ["cpu", "memory", "temperature", "hyprland/language", "clock", "custom/weather", "network", "pulseaudio", "backlight", "battery"],
-    "hyprland/language": {
-       "format": "{}",
-       "format-us": "us"
+    "layer": "top",
+    "position": "top",
+    "mod": "dock",
+    "exclusive": true,
+    "passthrough": false,
+    "gtk-layer-shell": true,
+    "height": 50,
+    "modules-left": ["clock","custom/weather","hyprland/workspaces"],
+    "modules-center": ["hyprland/window"],
+    "modules-right": ["network", "bluetooth", "temperature","custom/power_profile","battery","backlight","pulseaudio","pulseaudio#microphone","tray"],
+    "hyprland/window": {
+        "format": "{}"
     },
+
+
+   "custom/weather" : {
+        //shows the current weather and forecast
+        "tooltip" : true,
+        "format" : "{}",
+        "interval" : 30,
+        "exec" : "~/.config/waybar/scripts/waybar-wttr.py",
+        "return-type" : "json"
+    },
+
+    "tray": {
+        "icon-size": 18,
+        "spacing": 10
+    },
+
     "clock": {
-        "format": "{:%e %B %Y %H:%M}",
-        "timezone": "Europe/Moscow",
-        "tooltip": false
+        "format": "{: %I:%M %p   %a, %b %e}",
+        "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>"
     },
+
     "backlight": {
         "device": "intel_backlight",
-        "format": " {percent}",
-        "tooltip": false
+        "format": "{icon} {percent}%",
+        "format-icons": ["󰃞", "󰃟", "󰃠"],
+        "on-scroll-up": "brightnessctl set 1%+",
+        "on-scroll-down": "brightnessctl set 1%-",
+        "min-length": 6
     },
-    "cpu": {
-        "format": "{}",
-        "tooltip": false,
-        "on-click": "alacritty --hold -e btop"
-    },
-    "memory": {
-        "format": " {}",
-        "tooltip": false,
-        "on-click": "alacritty --hold -e btop"
-    },
+
     "battery": {
-        "interval": 60,
         "states": {
+            "good": 95,
             "warning": 30,
-            "critical": 15
+            "critical": 20
         },
-        "format": "{icon} {capacity}",
-        "format-icons": ["", "", "", "", ""],
-        "max-length": 25,
-        "tooltip": false
+        "format": "{icon} {capacity}%",
+        "format-charging": " {capacity}%",
+        "format-plugged": " {capacity}%",
+        "format-alt": "{time} {icon}",
+        "format-icons": ["󰂎", "󰁺", "󰁻", "󰁼", "󰁽", "󰁾", "󰁿", "󰂀", "󰂁", "󰂂", "󰁹"]
     },
-    "network": {
-        "format": " {signalStrength}",
-        "tooltip": false,
-        "on-click": "nm-connection-editor"
-    },
+
     "pulseaudio": {
-        "format": " {volume}",
-        "format-bluetooth": " {volume}",
-        "format-muted": "",
+        "format": "{icon} {volume}%",
         "tooltip": false,
-        "on-click": "volumectl toggle"
-    },
-    "custom/arch": {
-        "format": "",
-        "tooltip": false,
-        "on-click": "alacritty --hold -e neofetch"
-    },
-    "temperature": {
-        "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
-        "format": " {temperatureC}°C",
-        "interval": 2,
-        "tooltip": false
-    },
-    "custom/spotify": {
-        "exec": "playerctl metadata --format '{{ artist }} - {{ title }}'",
-        "interval": 10,
-        "format": "  {}",
-        "tooltip": false
-    },
-    "custom/weather": {
-        "exec": "curl -s wttr.in/Moscow?format=1",
-        "interval": 100,
-        "format": "{}",
-        "tooltip": false
-    },
-    "custom/notification": {
-        "tooltip": false,
-        "format": "{icon}",
+        "format-muted": " Muted",
+        "on-click": "pamixer -t",
+        "on-scroll-up": "pamixer -i 5",
+        "on-scroll-down": "pamixer -d 5",
+        "scroll-step": 5,
         "format-icons": {
-          "notification": "",
-          "none": "",
-          "dnd-notification": "",
-          "dnd-none": ""
-        },
-        "return-type": "json",
-        "exec-if": "which swaync-client",
-        "exec": "swaync-client -swb",
-        "on-click": "swaync-client -t -sw",
-        "on-click-right": "swaync-client -d -sw",
-        "escape": true
+            "headphone": "",
+            "hands-free": "",
+            "headset": "",
+            "phone": "",
+            "portable": "",
+            "car": "",
+            "default": ["", "", ""]
+        }
+    },
+
+    "pulseaudio#microphone": {
+        "format": "{format_source}",
+        "format-source": " {volume}%",
+        "format-source-muted": " Muted",
+        "on-click": "pamixer --default-source -t",
+        "on-scroll-up": "pamixer --default-source -i 5",
+        "on-scroll-down": "pamixer --default-source -d 5",
+        "scroll-step": 5
+    },
+
+    "temperature": {
+        "thermal-zone": 0,
+        "format": "{temperatureF}°C ",
+        "critical-threshold": 80,
+        "format-critical": "{temperatureC}°C "
+    },
+
+    "network": {
+        // "interface": "wlp2*", // (Optional) To force the use of this interface
+        "format-wifi": "  {signalStrength}%",
+        "format-ethernet": "{ipaddr}/{cidr}",
+        "tooltip-format": "{essid} - {ifname} via {gwaddr}",
+        "format-linked": "{ifname} (No IP)",
+        "format-disconnected": "Disconnected ⚠",
+        "format-alt": "{ifname}:{essid} {ipaddr}/{cidr}"
+    },
+
+    "bluetooth": {
+	    "format": " {status}",
+	    "format-disabled": "", // an empty format will hide the module
+	    "format-connected": " {num_connections}",
+	    "tooltip-format": "{device_alias}",
+	    "tooltip-format-connected": " {device_enumerate}",
+	    "tooltip-format-enumerate-connected": "{device_alias}"
     }
 }
