--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -82,6 +82,7 @@ gestures {
 windowrule=float,(.)
 #windowrule=tile,title:(Mozilla Firefox)
 windowrule=tile,title:(Visual Studio Code)
+windowrule = center, class:jetbrains-rustrover
 windowrule=tile,class:jetbrains-clion
 windowrule=tile,class:jetbrains-pycharm
 #windowrule=tile,class:jetbrains-goland
@@ -99,7 +100,7 @@ windowrule=tile,title:(Mozilla Firefox)
 # exec on startup
 #exec-once=avizo-service
 exec-once=dbus-update-activation-environment --all
-exec-once=bash ~/.config/swaylock/config.sh
+#exec-once=bash ~/.config/swaylock/config.sh
 exec-once=waybar
 #exec-once=swaync
 
@@ -110,7 +111,7 @@ bind=SUPER,Q,killactive
 #bind=SUPER,SHIFT E,exit
 bind=SUPER,f,fullscreen,
 bind=SUPER,d,exec,wofi --show=drun --show-icons
-bind=SUPER,l,exec,bash ~/.config/swaylock/config.sh
+bind=SUPER,l,exec,swaylock -C /home/i3alumba/,config/swaylock/config
 bind=SUPER SHIFT, F,exec,thunar
 bind=SUPER,n,exec,swaync-client -t -sw
 bind=SUPER,space,togglefloating,
@@ -177,3 +178,6 @@ env = XDG_SESSION_TYPE,wayland
 env = GDM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = WLR_NO_HARDWARE_CURSORS,1
+
+env=QT_QPA_PLATFORM,wayland
+env=QT_QPA_PLATFORMTHEME,qt5ct
