--- a/waybar/config
+++ b/waybar/config
@@ -8,11 +8,20 @@
     "height": 50,
     "modules-left": ["clock","custom/weather","hyprland/workspaces"],
     "modules-center": ["hyprland/window"],
-    "modules-right": ["network", "bluetooth", "temperature","custom/power_profile","battery","backlight","pulseaudio","pulseaudio#microphone","tray"],
+    "modules-right": ["hyprland/language", "network", "bluetooth", "temperature","custom/power_profile","battery","backlight","pulseaudio","pulseaudio#microphone","tray"],
     "hyprland/window": {
         "format": "{}"
     },
-
+    "cpu": {
+        "format": "{}",
+        "tooltip": false,
+        "on-click": "alacritty --hold -e btop"
+    },
+    "memory": {
+        "format": " {}",
+        "tooltip": false,
+        "on-click": "alacritty --hold -e btop"
+    },
 
    "custom/weather" : {
         //shows the current weather and forecast
