--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -11,15 +11,14 @@ OR EDIT THIS ONE ACCORDING TO THE WIKI INSTRUCTIONS.
 # For a full list, see the wiki (basic and advanced configuring)
 #
 
-#monitor=eDP-1, 1920x1080@60,0x0,1
-monitor=DP-1,2560x1440@165,1920x0,1
-workspace=DP-1,1
-workspace=DP-1,3
-monitor=HDMI-A-1,1920x1080@60,0x360,1
-#monitor=HDMI-A-1,disable
-workspace=HDMI-A-1,2
-workspace=HDMI-A-1,4
-#monitor=HDMI-A-1,1920x1080@60,0x0,1,mirror,eDP-1
+monitor=eDP-1, 1920x1080@60,0x0,1
+#monitor=DP-1,2560x1440@165,1920x0,1
+#workspace=DP-1,1
+#workspace=DP-1,3
+#monitor=HDMI-A-1,1920x1080@60,0x0,1
+#workspace=HDMI-A-1,2
+#workspace=HDMI-A-1,4
+monitor=HDMI-A-1,1920x1080@60,0x0,1,mirror,eDP-1
 
 input {
     kb_layout=us,ru
@@ -33,11 +32,10 @@ input {
     sensitivity=0 # -1.0 - 1.0, 0 means no modification.
 }
 
-exec-once=hyprpaper
-
 $main_mod=SUPER
 general {
-    #max_fps=60
+    max_fps=60
+
     gaps_in=10
     gaps_out=20
     border_size=2
@@ -51,7 +49,7 @@ general {
 
 decoration {
     rounding=10
-    #blur=1
+    #blur=yes
     #blur_size=3 # minimum 1
     #blur_passes=1 # minimum 1
     #blur_new_optimizations=on
@@ -73,22 +71,16 @@ gestures {
     workspace_swipe=yes
 }
 
-#startup
-#exec-once=alacritty -e btop
-#exec-once=alacritty -e neofetch
-#exec-once=alacritty -e ranger
-
 # window rules
 windowrule=float,(.)
 #windowrule=tile,title:(Mozilla Firefox)
 windowrule=tile,title:(Visual Studio Code)
-windowrule = center, class:jetbrains-rustrover
 windowrule=tile,class:jetbrains-clion
 windowrule=tile,class:jetbrains-pycharm
-#windowrule=tile,class:jetbrains-goland
-#windowrule=tile,class:jetbrains-webstorm
-#windowrule=tile,class:jetbrains-rustrover
-#windowrule=tile,class:jetbrains-fleet
+windowrule=tile,class:jetbrains-goland
+windowrule=tile,class:jetbrains-webstorm
+windowrule=tile,class:jetbrains-rustrover
+windowrule=tile,class:jetbrains-fleet
 #windowrule=tile,title:(discord)
 windowrule=tile,title:(Google Chrome)
 windowrule=tile,title:(Mozilla Firefox)
@@ -100,7 +92,8 @@ windowrule=tile,title:(Mozilla Firefox)
 # exec on startup
 #exec-once=avizo-service
 exec-once=dbus-update-activation-environment --all
-#exec-once=bash ~/.config/swaylock/config.sh
+exec-once=hyprpaper
+exec-once=bash ~/.config/swaylock/config.sh
 exec-once=waybar
 #exec-once=swaync
 
@@ -111,7 +104,7 @@ bind=SUPER,Q,killactive
 #bind=SUPER,SHIFT E,exit
 bind=SUPER,f,fullscreen,
 bind=SUPER,d,exec,wofi --show=drun --show-icons
-bind=SUPER,l,exec,swaylock -C /home/i3alumba/,config/swaylock/config
+bind=SUPER,l,exec,bash ~/.config/swaylock/config.sh
 bind=SUPER SHIFT, F,exec,thunar
 bind=SUPER,n,exec,swaync-client -t -sw
 bind=SUPER,space,togglefloating,
@@ -178,6 +171,3 @@ env = XDG_SESSION_TYPE,wayland
 env = GDM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = WLR_NO_HARDWARE_CURSORS,1
-
-env=QT_QPA_PLATFORM,wayland
-env=QT_QPA_PLATFORMTHEME,qt5ct
