--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,3 +1,2 @@
 preload = /home/i3alumba/.config/hypr/arch_dracula.png
-wallpaper=DP-1,/home/i3alumba/.config/hypr/arch_dracula.png
-wallpaper=HDMI-A-1,/home/i3alumba/.config/hypr/arch_dracula.png
+wallpaper=eDP-1,/home/i3alumba/.config/hypr/arch_dracula.png
