--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -11,14 +11,14 @@ OR EDIT THIS ONE ACCORDING TO THE WIKI INSTRUCTIONS.
 # For a full list, see the wiki (basic and advanced configuring)
 #
 
-monitor=eDP-1, 1920x1080@60,0x0,1
-#monitor=DP-1,2560x1440@165,1920x0,1
-#workspace=DP-1,1
-#workspace=DP-1,3
-#monitor=HDMI-A-1,1920x1080@60,0x0,1
-#workspace=HDMI-A-1,2
-#workspace=HDMI-A-1,4
-monitor=HDMI-A-1,1920x1080@60,0x0,1,mirror,eDP-1
+#monitor=eDP-1, 1920x1080@60,0x0,1
+monitor=DP-1,2560x1440@165,1920x0,1
+workspace=DP-1,1
+workspace=DP-1,3
+monitor=HDMI-A-1,1920x1080@60,0x360,1
+workspace=HDMI-A-1,2
+workspace=HDMI-A-1,4
+#monitor=HDMI-A-1,1920x1080@60,0x0,1,mirror,eDP-1
 
 input {
     kb_layout=us,ru
@@ -34,8 +34,6 @@ input {
 
 $main_mod=SUPER
 general {
-    max_fps=60
-
     gaps_in=10
     gaps_out=20
     border_size=2
@@ -44,7 +42,7 @@ general {
 
     apply_sens_to_raw=0 # whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
 
-    #damage_tracking=full # leave it on full unless you hate your GPU and want to make it suffer
+    #damage_tracking=1# leave it on full unless you hate your GPU and want to make it suffer
 }
 
 decoration {
@@ -73,33 +71,21 @@ gestures {
 
 # window rules
 windowrule=float,(.)
-#windowrule=tile,title:(Mozilla Firefox)
 windowrule=tile,title:(Visual Studio Code)
-windowrule=tile,class:jetbrains-clion
-windowrule=tile,class:jetbrains-pycharm
-windowrule=tile,class:jetbrains-goland
-windowrule=tile,class:jetbrains-webstorm
-windowrule=tile,class:jetbrains-rustrover
-windowrule=tile,class:jetbrains-fleet
-#windowrule=tile,title:(discord)
+windowrule=tile,class:^(jetbrains)(.*)$
 windowrule=tile,title:(Google Chrome)
-windowrule=tile,title:(Mozilla Firefox)
-#windowrule=tile,title:(Postman)
-#windowrule=tile,title:(Spotify)
-#windowrule=tile,title:(DBeaver)
-#windowrule=tile,title:(Steam)
+windowrule=tile,title:(Firefox)
 
 # exec on startup
 #exec-once=avizo-service
 exec-once=dbus-update-activation-environment --all
 exec-once=hyprpaper
-exec-once=bash ~/.config/swaylock/config.sh
 exec-once=waybar
 #exec-once=swaync
 
 # example binds
-bind=SUPER,Return,exec,alacritty -e zsh
-bind=SUPERSHIFT,Return,exec,alacritty -e zsh
+bind=SUPER,Return,exec,alacritty
+bind=SUPERSHIFT,Return,exec,alacritty
 bind=SUPER,Q,killactive
 #bind=SUPER,SHIFT E,exit
 bind=SUPER,f,fullscreen,
@@ -111,7 +97,7 @@ bind=SUPER,space,togglefloating,
 bindm=SUPER,mouse:272,movewindow
 bindm=SUPER,mouse:273,resizewindow
 bind=SUPERSHIFT,c,exec,hyprctl reload
-bind=SUPER,b,exec,google-chrome-stable
+bind=SUPER,b,exec,firefox
 bind=SUPER SHIFT,l,exec,swaylock
 
 bind=SUPER,left,movefocus,l
@@ -160,9 +146,7 @@ bind=SUPER,Print,exec,grim -g "$(slurp)" $HOME/Images/capture-$(date +%Y-%m-%d_%
 windowrule=workspace 2, Google-chrome
 windowrule=workspace 2, firefox
 windowrule=workspace 3, Code
-windowrule=workspace 3, jetbrains-pycharm
-windowrule=workspace 3, jetbrains-clion
-windowrule=workspace 3, jetbrains-rustrover
+windowrule=workspace 3, class:^(jetbrains)(.*)$
 windowrule=workspace 4, discord
 windowrule=workspace 4, org.telegram.desktop
 
