--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -84,8 +84,8 @@ exec-once=waybar
 #exec-once=swaync
 
 # example binds
-bind=SUPER,Return,exec,alacritty
-bind=SUPERSHIFT,Return,exec,alacritty
+bind=SUPER,Return,exec,kitty
+bind=SUPERSHIFT,Return,exec,kitty
 bind=SUPER,Q,killactive
 #bind=SUPER,SHIFT E,exit
 bind=SUPER,f,fullscreen,
