--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -97,7 +97,7 @@ bind=SUPER,space,togglefloating,
 bindm=SUPER,mouse:272,movewindow
 bindm=SUPER,mouse:273,resizewindow
 bind=SUPERSHIFT,c,exec,hyprctl reload
-bind=SUPER,b,exec,google-chrome-stable
+bind=SUPER,b,exec,firefox
 bind=SUPER SHIFT,l,exec,swaylock
 
 bind=SUPER,left,movefocus,l
