--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -11,14 +11,14 @@ OR EDIT THIS ONE ACCORDING TO THE WIKI INSTRUCTIONS.
 # For a full list, see the wiki (basic and advanced configuring)
 #
 
-monitor=eDP-1,1920x1080@60,0x0,1
-# monitor=DP-1,2560x1440@165,1920x0,1
-# workspace=DP-1,1
-# workspace=DP-1,3
-# monitor=HDMI-A-1,1920x1080@60,0x360,1
-# workspace=HDMI-A-1,2
-# workspace=HDMI-A-1,4
-monitor=HDMI-A-1,1920x1080@60,0x0,1,mirror,eDP-1
+# monitor=eDP-1,1920x1080@60,0x0,1
+monitor=DP-1,2560x1440@165,1920x0,1
+workspace=DP-1,1
+workspace=DP-1,3
+monitor=HDMI-A-1,1920x1080@60,0x360,1
+workspace=HDMI-A-1,2
+workspace=HDMI-A-1,4
+# monitor=HDMI-A-1,1920x1080@60,0x0,1,mirror,eDP-1
 
 input {
     kb_layout=us,ru
