update web and pacjages

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -12,13 +12,13 @@ OR EDIT THIS ONE ACCORDING TO THE WIKI INSTRUCTIONS.
 #
 
 monitor=eDP-1,1920x1080@60,0x0,1
-# monitor=DP-1,2560x1440@165,1920x0,1
-# workspace=DP-1,1
-# workspace=DP-1,3
-# monitor=HDMI-A-1,1920x1080@60,0x360,1
-# workspace=HDMI-A-1,2
-# workspace=HDMI-A-1,4
-monitor=HDMI-A-1,1920x1080@60,0x0,1,mirror,eDP-1
+monitor=DP-1,2560x1440@165,1920x0,1
+workspace=DP-1,1
+workspace=DP-1,3
+monitor=HDMI-A-1,1920x1080@60,0x360,1
+workspace=HDMI-A-1,2
+workspace=HDMI-A-1,4
+#monitor=HDMI-A-1,1920x1080@60,0x0,1,mirror,eDP-1
 
 input {
     kb_layout=us,ru
@@ -72,7 +72,6 @@ gestures {
 # window rules
 windowrule=float,(.)
 windowrule=tile,title:(Visual Studio Code)
-windowrule=tile,class:^(jetbrains)(.*)$
 windowrule=tile,title:(Google Chrome)
 windowrule=tile,title:(Firefox)
 
@@ -97,7 +96,7 @@ bind=SUPER,space,togglefloating,
 bindm=SUPER,mouse:272,movewindow
 bindm=SUPER,mouse:273,resizewindow
 bind=SUPERSHIFT,c,exec,hyprctl reload
-bind=SUPER,b,exec,firefox
+bind=SUPER,b,exec,firefox-developer-edition
 bind=SUPER SHIFT,l,exec,swaylock
 
 bind=SUPER,left,movefocus,l
@@ -146,7 +145,6 @@ bind=SUPER,Print,exec,grim -g "$(slurp)" $HOME/Images/capture-$(date +%Y-%m-%d_%
 windowrule=workspace 2, Google-chrome
 windowrule=workspace 2, firefox
 windowrule=workspace 3, Code
-windowrule=workspace 3, class:^(jetbrains)(.*)$
 windowrule=workspace 4, discord
 windowrule=workspace 4, org.telegram.desktop
 
