--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -13,10 +13,11 @@ OR EDIT THIS ONE ACCORDING TO THE WIKI INSTRUCTIONS.
 
 monitor=eDP-1,1920x1080@60,0x0,1
 monitor=DP-1,2560x1440@165,1920x0,1
-workspace=DP-1,1
+
+workspace=1, monitor:DP-1, default: true
 workspace=DP-1,3
 monitor=HDMI-A-1,1920x1080@60,0x360,1
-workspace=HDMI-A-1,2
+workspace=2, monitor: HDMI-A-1, default:true
 workspace=HDMI-A-1,4
 #monitor=HDMI-A-1,1920x1080@60,0x0,1,mirror,eDP-1
 
@@ -74,6 +75,7 @@ windowrule=float,(.)
 windowrule=tile,title:(Visual Studio Code)
 windowrule=tile,title:(Google Chrome)
 windowrule=tile,title:(Firefox)
+
 
 # exec on startup
 #exec-once=avizo-service
