--- a/ranger/rifle.conf
+++ b/ranger/rifle.conf
@@ -67,7 +67,7 @@ ext x?html?, has uzbl-browser,     X, flag f = uzbl-browser -- "$@"
 ext x?html?, has uzbl-core,        X, flag f = uzbl-core -- "$@"
 ext x?html?, has midori,           X, flag f = midori -- "$@"
 ext x?html?, has opera,            X, flag f = opera -- "$@"
-ext x?html?, has firefox-developer-edition,          X, flag f = firefox-developer-edition -- "$@"
+ext x?html?, has firefox,          X, flag f = firefox -- "$@"
 ext x?html?, has seamonkey,        X, flag f = seamonkey -- "$@"
 ext x?html?, has iceweasel,        X, flag f = iceweasel -- "$@"
 ext x?html?, has chromium-browser, X, flag f = chromium-browser -- "$@"
@@ -140,7 +140,7 @@ mime ^video, terminal, !X, has mplayer   = mplayer -- "$@"
 #-------------------------------------------
 # Documents
 #-------------------------------------------
-ext pdf, has firefox-developer-edition,  X, flag f = firefox-developer-edition --new-window -- "$@"
+ext pdf, has firefox,  X, flag f = firefox --new-window -- "$@"
 ext pdf, has llpp,     X, flag f = llpp "$@"
 ext pdf, has zathura,  X, flag f = zathura -- "$@"
 ext pdf, has mupdf,    X, flag f = mupdf "$@"
