--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -15,6 +15,7 @@ monitor=eDP-1,1920x1080@60,0x0,1
 monitor=DP-1,2560x1440@165,1920x0,1
 
 workspace=1, monitor:DP-1, default: true
+workspace=1, monitor:eDP-1, default: true
 workspace=DP-1,3
 monitor=HDMI-A-1,1920x1080@60,0x360,1
 workspace=2, monitor: HDMI-A-1, default:true
@@ -153,6 +154,7 @@ windowrule=workspace 4, org.telegram.desktop
 env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
 env = GDM_BACKEND,nvidia-drm
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+# env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = WLR_NO_HARDWARE_CURSORS,1
 env = QT_QPA_PLATFORMTHEME,qt5ct
+# env = WLR_DRM_DEVICES,/dev/dri/card1
