--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -154,7 +154,7 @@ windowrule=workspace 4, org.telegram.desktop
 env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
 env = GDM_BACKEND,nvidia-drm
-# env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = WLR_NO_HARDWARE_CURSORS,1
 env = QT_QPA_PLATFORMTHEME,qt5ct
-# env = WLR_DRM_DEVICES,/dev/dri/card1
+# env = WLR_DRM_DEVICES,/dev/dri/card0:/dev/dri/card1
