--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -72,7 +72,7 @@ gestures {
 }
 
 # window rules
-windowrule=float,(.)
+# windowrule=float,(.)
 windowrule=tile,title:(Visual Studio Code)
 windowrule=tile,title:(Google Chrome)
 windowrule=tile,title:(Firefox)
