--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -84,6 +84,9 @@ exec-once=dbus-update-activation-environment --all
 exec-once=hyprpaper
 exec-once=waybar
 #exec-once=swaync
+exec-once=kitty -e ranger
+exec-once=kitty -e btop
+exec-once=kitty -e neofetch
 
 # example binds
 bind=SUPER,Return,exec,kitty
