--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -44,15 +44,17 @@ general {
 
     apply_sens_to_raw=0 # whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
 
-    #damage_tracking=1# leave it on full unless you hate your GPU and want to make it suffer
 }
+# damage_tracking=2 # leave it on full unless you hate your GPU and want to make it suffer
 
 decoration {
     rounding=10
-    #blur=yes
-    #blur_size=3 # minimum 1
-    #blur_passes=1 # minimum 1
-    #blur_new_optimizations=on
+    blur {
+        enabled=true
+        size=3
+        passes=1
+        new_optimizations=true
+    }
 }
 
 animations {
@@ -73,9 +75,9 @@ gestures {
 
 # window rules
 # windowrule=float,(.)
-windowrule=tile,title:(Visual Studio Code)
-windowrule=tile,title:(Google Chrome)
-windowrule=tile,title:(Firefox)
+# windowrule=tile,title:(Visual Studio Code)
+# windowrule=tile,title:(Google Chrome)
+# windowrule=tile,title:(Firefox)
 
 
 # exec on startup
@@ -86,7 +88,7 @@ exec-once=waybar
 #exec-once=swaync
 exec-once=kitty -e ranger
 exec-once=kitty -e btop
-exec-once=kitty -e neofetch
+# exec-once=kitty -e neofetch
 
 # example binds
 bind=SUPER,Return,exec,kitty
@@ -153,6 +155,7 @@ windowrule=workspace 2, firefox
 windowrule=workspace 3, Code
 windowrule=workspace 4, discord
 windowrule=workspace 4, org.telegram.desktop
+windowrule=workspace 5, steam
 
 env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
