--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -86,13 +86,13 @@ exec-once=dbus-update-activation-environment --all
 exec-once=hyprpaper
 exec-once=waybar
 #exec-once=swaync
-exec-once=kitty -e ranger
-exec-once=kitty -e btop
+# exec-once=kitty -e ranger
+# exec-once=kitty -e btop
 # exec-once=kitty -e neofetch
 
 # example binds
 bind=SUPER,Return,exec,kitty
-bind=SUPERSHIFT,Return,exec,kitty
+bind=SUPERSHIFT,Return,exec,kitty -e ranger
 bind=SUPER,Q,killactive
 #bind=SUPER,SHIFT E,exit
 bind=SUPER,f,fullscreen,
@@ -105,7 +105,7 @@ bindm=SUPER,mouse:272,movewindow
 bindm=SUPER,mouse:273,resizewindow
 bind=SUPERSHIFT,c,exec,hyprctl reload
 bind=SUPER,b,exec,firefox-developer-edition
-bind=SUPER SHIFT,l,exec,swaylock
+bind=SUPERSHIFT,l,exec,hyprlock
 
 bind=SUPER,left,movefocus,l
 bind=SUPER,right,movefocus,r
@@ -147,13 +147,18 @@ bind=,XF86AudioMicMute,exec,volumectl -m toggle
 bind=,XF86MonBrightnessUp,exec,brightnessctl s +10%
 bind=,XF86MonBrightnessDown,exec,brightnessctl s 10%-
 
-bind=,Print,exec,grim $HOME/Screenshots/capture-$(date +%Y-%m-%d_%H-%m-%s).png
-bind=SUPER,Print,exec,grim -g "$(slurp)" $HOME/Images/capture-$(date +%Y-%m-%d_%H-%m-%s).png
+# bind=,Print,exec,grim $HOME/Screenshots/capture-$(date +%Y-%m-%d_%H-%m-%s).png
+# bind=SUPER,Print,exec,grim -g "$(slurp)" $HOME/Images/capture-$(date +%Y-%m-%d_%H-%m-%s).png
+bind=,Print,exec,hyprshot -m output -o ~/Screenshots/
+bind=SUPER,Print,exec,hyprshot -m window -o ~/Screenshots/
+bind=SUPERSHIFT,Print,exec,hyprshot -m region -o ~/Screenshots/
+
 
 windowrule=workspace 2, Google-chrome
 windowrule=workspace 2, firefox
 windowrule=workspace 3, Code
 windowrule=workspace 4, discord
+windowrule=workspace 4, WebCord
 windowrule=workspace 4, org.telegram.desktop
 windowrule=workspace 5, steam
 
@@ -164,3 +169,11 @@ env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = WLR_NO_HARDWARE_CURSORS,1
 env = QT_QPA_PLATFORMTHEME,qt5ct
 # env = WLR_DRM_DEVICES,/dev/dri/card0:/dev/dri/card1
+
+windowrulev2 = opacity 0.0 override 0.0 override,class:^(xwaylandvideobridge)$
+windowrulev2 = noanim,class:^(xwaylandvideobridge)$
+windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
+windowrulev2 = maxsize 1 1,class:^(xwaylandvideobridge)$
+windowrulev2 = noblur,class:^(xwaylandvideobridge)$
+
+env = XDG_CURRENT_DESKTOP,gnome
