--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -82,6 +82,7 @@ gestures {
 
 # exec on startup
 #exec-once=avizo-service
+exec-once=brightnessctl s 0%
 exec-once=dbus-update-activation-environment --all
 exec-once=hyprpaper
 exec-once=waybar
