massive move to catppuccin + new monitor for laptop

--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,4 +1,4 @@
-preload = /home/i3alumba/.config/hypr/arch_dracula.png
-wallpaper=eDP-1,/home/i3alumba/.config/hypr/arch_dracula.png
-wallpaper=DP-1,/home/i3alumba/.config/hypr/arch_dracula.png
-wallpaper=HDMI-A-1,/home/i3alumba/.config/hypr/arch_dracula.png
+preload = /home/i3alumba/.config/hypr/wallpaper.png
+wallpaper=eDP-1,/home/i3alumba/.config/hypr/wallpaper.png
+wallpaper=DP-1,/home/i3alumba/.config/hypr/wallpaper.png
+wallpaper=HDMI-A-1,/home/i3alumba/.config/hypr/wallpaper.png
