--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -11,16 +11,14 @@
 # For a full list, see the wiki (basic and advanced configuring)
 #
 
-monitor=eDP-1,1920x1080@60,0x0,1
-monitor=DP-1,2560x1440@165,1920x0,1
-
-workspace=1, monitor:DP-1, default: true
-workspace=1, monitor:eDP-1, default: true
-workspace=DP-1,3
+monitor=eDP-1,1920x1200@60,1920x0,1
 monitor=HDMI-A-1,1920x1080@60,0x360,1
-workspace=2, monitor: HDMI-A-1, default:true
+
+workspace=1, monitor:eDP-1, default: true
+workspace=eDP-1,3
+
+workspace=HDMI-A-1,2
 workspace=HDMI-A-1,4
-#monitor=HDMI-A-1,1920x1080@60,0x0,1,mirror,eDP-1
 
 input {
     kb_layout=us,ru
@@ -82,7 +80,6 @@ gestures {
 
 # exec on startup
 #exec-once=avizo-service
-exec-once=brightnessctl s 0%
 exec-once=dbus-update-activation-environment --all
 exec-once=hyprpaper
 exec-once=waybar
@@ -92,10 +89,10 @@ exec-once=waybar
 # exec-once=kitty -e neofetch
 
 # example binds
-bind=SUPER,Return,exec,kitty
+bind=SUPER,Return,exec,kitty -e tmux
 bind=SUPERSHIFT,Return,exec,kitty -e ranger
 bind=SUPER,Q,killactive
-#bind=SUPER,SHIFT E,exit
+bind=SUPER,~,exec,reboot
 bind=SUPER,f,fullscreen,
 bind=SUPER,d,exec,wofi --show=drun --show-icons
 bind=SUPER,l,exec,bash ~/.config/swaylock/config.sh
@@ -163,10 +160,10 @@ windowrule=workspace 4, WebCord
 windowrule=workspace 4, org.telegram.desktop
 windowrule=workspace 5, steam
 
-env = LIBVA_DRIVER_NAME,nvidia
+# env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
-env = GDM_BACKEND,nvidia-drm
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+# env = GDM_BACKEND,nvidia-drm
+# env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = WLR_NO_HARDWARE_CURSORS,1
 env = QT_QPA_PLATFORMTHEME,qt5ct
 # env = WLR_DRM_DEVICES,/dev/dri/card0:/dev/dri/card1
@@ -177,4 +174,4 @@ windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
 windowrulev2 = maxsize 1 1,class:^(xwaylandvideobridge)$
 windowrulev2 = noblur,class:^(xwaylandvideobridge)$
 
-env = XDG_CURRENT_DESKTOP,gnome
+# env = XDG_CURRENT_DESKTOP,gnome
