--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,9 +6,6 @@ bold_italic_font Hack Nerd Font:style= Bold Italic
 font_size 11.0
 
 disable_ligatures never
-cursor #cccccc
-cursor_text_color #111111
-
 mouse_hide_wait 3.0
 
 open_url_with default
@@ -30,30 +27,90 @@ window_border_width 0.5pt
 draw_minimal_borders yes
 window_padding_width 10
 
-placement_strategy center
-
-confirm_os_window_close 0
-background #282a36
-foreground #bd93f9
-
 background_opacity 0.9
-
+placement_strategy center
+confirm_os_window_close 0
 background_blur 1
-color0 #1d1f21
-color8 #666666
-color1 #cc6666
-color9 #d54e53
-color2 #b5bd68
-color10 #b9ca4a
-color3 #f0c674
-color11 #e7c547
-color4 #81a2be
-color12 #7aa6da
-color5 #b294bb
-color13 #c397d8
-color6 #8abeb7
-color14 #70c0b1
-color7 #c5c8c6
-color15 #eaeaea
 
 enable_audio_bell no
+
+# vim:ft=kitty
+
+## name:     Catppuccin Kitty Mocha
+## author:   Catppuccin Org
+## license:  MIT
+## upstream: https://github.com/catppuccin/kitty/blob/main/themes/mocha.conf
+## blurb:    Soothing pastel theme for the high-spirited!
+
+
+
+# The basic colors
+foreground              #CDD6F4
+background              #1E1E2E
+selection_foreground    #1E1E2E
+selection_background    #F5E0DC
+
+# Cursor colors
+cursor                  #F5E0DC
+cursor_text_color       #1E1E2E
+
+# URL underline color when hovering with mouse
+url_color               #F5E0DC
+
+# Kitty window border colors
+active_border_color     #B4BEFE
+inactive_border_color   #6C7086
+bell_border_color       #F9E2AF
+
+# OS Window titlebar colors
+wayland_titlebar_color  #1E1E2E
+macos_titlebar_color    #1E1E2E
+
+# Tab bar colors
+active_tab_foreground   #11111B
+active_tab_background   #CBA6F7
+inactive_tab_foreground #CDD6F4
+inactive_tab_background #181825
+tab_bar_background      #11111B
+
+# Colors for marks (marked text in the terminal)
+mark1_foreground #1E1E2E
+mark1_background #B4BEFE
+mark2_foreground #1E1E2E
+mark2_background #CBA6F7
+mark3_foreground #1E1E2E
+mark3_background #74C7EC
+
+# The 16 terminal colors
+
+# black
+color0 #45475A
+color8 #585B70
+
+# red
+color1 #F38BA8
+color9 #F38BA8
+
+# green
+color2  #A6E3A1
+color10 #A6E3A1
+
+# yellow
+color3  #F9E2AF
+color11 #F9E2AF
+
+# blue
+color4  #89B4FA
+color12 #89B4FA
+
+# magenta
+color5  #F5C2E7
+color13 #F5C2E7
+
+# cyan
+color6  #94E2D5
+color14 #94E2D5
+
+# white
+color7  #BAC2DE
+color15 #A6ADC8
