--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -12,13 +12,12 @@
 #
 
 monitor=eDP-1,1920x1200@60,1920x0,1
-monitor=HDMI-A-1,1920x1080@60,0x360,1
+monitor=HDMI-A-1,1920x1200@60,0x0,1
 
-workspace=1, monitor:eDP-1, default: true
-workspace=eDP-1,3
-
-workspace=HDMI-A-1,2
-workspace=HDMI-A-1,4
+workspace=1,monitor:eDP-1,default:true
+workspace=3,monitor:eDP-1
+workspace=2,monitor:HDMI-A-1,default:true
+workspace=4,monitor:HDMI-A-1
 
 input {
     kb_layout=us,ru
