--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -18,6 +18,7 @@ workspace=1,monitor:eDP-1,default:true
 workspace=3,monitor:eDP-1
 workspace=2,monitor:HDMI-A-1,default:true
 workspace=4,monitor:HDMI-A-1
+workspace=0,monitor:HDMI-A-1
 
 input {
     kb_layout=us,ru
@@ -70,22 +71,9 @@ gestures {
     workspace_swipe=yes
 }
 
-# window rules
-# windowrule=float,(.)
-# windowrule=tile,title:(Visual Studio Code)
-# windowrule=tile,title:(Google Chrome)
-# windowrule=tile,title:(Firefox)
-
-
-# exec on startup
-#exec-once=avizo-service
 exec-once=dbus-update-activation-environment --all
 exec-once=hyprpaper
 exec-once=waybar
-#exec-once=swaync
-# exec-once=kitty -e ranger
-# exec-once=kitty -e btop
-# exec-once=kitty -e neofetch
 
 # example binds
 bind=SUPER,Return,exec,kitty -e tmux
@@ -144,8 +132,6 @@ bind=,XF86AudioMicMute,exec,volumectl -m toggle
 bind=,XF86MonBrightnessUp,exec,brightnessctl s +10%
 bind=,XF86MonBrightnessDown,exec,brightnessctl s 10%-
 
-# bind=,Print,exec,grim $HOME/Screenshots/capture-$(date +%Y-%m-%d_%H-%m-%s).png
-# bind=SUPER,Print,exec,grim -g "$(slurp)" $HOME/Images/capture-$(date +%Y-%m-%d_%H-%m-%s).png
 bind=,Print,exec,hyprshot -m output -o ~/Screenshots/
 bind=SUPER,Print,exec,hyprshot -m window -o ~/Screenshots/
 bind=SUPERSHIFT,Print,exec,hyprshot -m region -o ~/Screenshots/
@@ -158,19 +144,14 @@ windowrule=workspace 4, discord
 windowrule=workspace 4, WebCord
 windowrule=workspace 4, org.telegram.desktop
 windowrule=workspace 5, steam
+windowrule=workspace 10, YandexMusic
 
-# env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
-# env = GDM_BACKEND,nvidia-drm
-# env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = WLR_NO_HARDWARE_CURSORS,1
 env = QT_QPA_PLATFORMTHEME,qt5ct
-# env = WLR_DRM_DEVICES,/dev/dri/card0:/dev/dri/card1
 
 windowrulev2 = opacity 0.0 override 0.0 override,class:^(xwaylandvideobridge)$
 windowrulev2 = noanim,class:^(xwaylandvideobridge)$
 windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
 windowrulev2 = maxsize 1 1,class:^(xwaylandvideobridge)$
 windowrulev2 = noblur,class:^(xwaylandvideobridge)$
-
-# env = XDG_CURRENT_DESKTOP,gnome
