--- a/hypr/hyprland/general.conf
+++ b/hypr/hyprland/general.conf
@@ -1,5 +1,5 @@
 # MONITOR CONFIG
-monitor=DP-1,2560x1440@165,1920x0,1
+# monitor=DP-1,2560x1440@165,1920x0,1
 monitor=HDMI-A-1,1920x1080@60,0x360,1
 
 workspace=1,monitor:DP-1,default:true
@@ -7,7 +7,7 @@ workspace=3,monitor:DP-1
 workspace=2,monitor:HDMI-A-1,default:true
 workspace=4,monitor:HDMI-A-1
 workspace=0,monitor:HDMI-A-1
-# monitor=,addreserved, 0, 0, 0, 0 # Custom reserved area
+monitor=,addreserved, 0, 0, 0, 0 # Custom reserved area
 
 # HDMI port: mirror display. To see device name, use `hyprctl monitors`
 # monitor=HDMI-A-1,1920x1080@60,1920x0,1,mirror,eDP-1
@@ -29,11 +29,6 @@ input {
     }
     special_fallthrough = true
     follow_mouse = 1
-}
-
-binds {
-    # focus_window_on_workspace_c# For Auto-run stuff see execs.confhange = true
-    scroll_event_delay = 0
 }
 
 gestures {
