--- a/hypr/hyprland/rules.conf
+++ b/hypr/hyprland/rules.conf
@@ -28,6 +28,7 @@ windowrule=workspace 2, firefox
 windowrule=workspace 3, Code
 windowrule=workspace 4, discord
 windowrule=workspace 4, WebCord
+windowrule=workspace 4, vesktop
 windowrule=workspace 4, org.telegram.desktop
 windowrule=workspace 5, steam
 windowrule=workspace 10, YandexMusic
