--- a/hypr/hyprland/execs.conf
+++ b/hypr/hyprland/execs.conf
@@ -1,7 +1,7 @@
 # Bar, wallpaper
 exec-once = swww-daemon --format xrgb
-exec-once = /usr/lib/geoclue-2.0/demos/agent # & gammastep
-exec-once = ags
+exec-once = /usr/lib/geoclue-2.0/demos/agent & gammastep
+exec-once = ags &
 
 # Input method
 exec-once = fcitx5
@@ -24,3 +24,4 @@ exec-once = wl-paste --type image --watch cliphist store
 
 # Cursor
 exec-once = hyprctl setcursor Bibata-Modern-Classic 24
+
