--- a/hypr/hyprland/rules.conf
+++ b/hypr/hyprland/rules.conf
@@ -29,6 +29,7 @@ windowrule=workspace 3, Code
 windowrule=workspace 4, discord
 windowrule=workspace 4, WebCord
 windowrule=workspace 4, vesktop
+windowrule=workspace 4, armcord
 windowrule=workspace 4, org.telegram.desktop
 windowrule=workspace 5, steam
 windowrule=workspace 10, YandexMusic
