--- a/hypr/hyprland/env.conf
+++ b/hypr/hyprland/env.conf
@@ -19,5 +19,8 @@ env = QT_QPA_PLATFORMTHEME, qt5ct
 
 # ############ Others #############
 env = XDG_SESSION_TYPE,gnome
-env = WLR_NO_HARDWARE_CURSORS,1
+env = XDG_SESSION_TYPE,wayland
 env = ELECTRON_OZONE_PLATFORM_HINT,wayland
+env = LIBVA_DRIVER_NAME,nvidia
+env = GBM_BACKEND,nvidia-drm
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
