--- a/hypr/hyprland/execs.conf
+++ b/hypr/hyprland/execs.conf
@@ -24,3 +24,5 @@ exec-once = wl-paste --type image --watch cliphist store
 
 # Cursor
 exec-once = hyprctl setcursor Bibata-Modern-Classic 24
+
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
