--- a/hypr/hyprland/general.conf
+++ b/hypr/hyprland/general.conf
@@ -1,9 +1,9 @@
 # MONITOR CONFIG
-# monitor=DP-1,2560x1440@165,1920x0,1
-monitor=HDMI-A-1,1920x1080@60,0x360,1
+monitor=eDP-1,1920x1200@60,1920x0,1
+monitor=HDMI-A-1,1920x1200@60,0x360,1
 
-workspace=1,monitor:DP-1,default:true
-workspace=3,monitor:DP-1
+workspace=1,monitor:eDP-1,default:true
+workspace=3,monitor:eDP-1
 workspace=2,monitor:HDMI-A-1,default:true
 workspace=4,monitor:HDMI-A-1
 workspace=0,monitor:HDMI-A-1
