--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,9 +1,11 @@
-[colors.primary]
-background = "#282a36"
-foreground = "#bd93f9"
+import = [
+  # uncomment the flavour you want below:
+  # "~/.config/alacritty/catppuccin-latte.toml"
+  # "~/.config/alacritty/catppuccin-frappe.toml"
+  # "~/.config/alacritty/catppuccin-macchiato.toml"
+  "~/.config/alacritty/catppuccin-mocha.toml"
+]
 
-[font.normal]
-family = "Hack Nerd Font"
 
 [window]
 opacity = 0.9
@@ -12,13 +14,16 @@ opacity = 0.9
 x = 10
 y = 10
 
-[cursor]
-# Set to false to disable completely
-smooth_motion = true
-# 0.0 = cursor is not moving, 1.0 = cursor moves instantly
-smooth_motion_factor = 0.2
-# 0.0 = broken, 1.0 = cursor shape is unaffected by movement
-smooth_motion_spring = 0.5
-# Override "block" cursor if you don't like how it looks in this fork
-# I prefer "underline"
-block_replace_shape = "underline"
+[font.normal]
+family = "Hack Nerd Font"
+
+[env]
+term = "xterm-256color"
+
+# [cursor]
+# # Set to false to disable completely
+# smooth_motion = true
+# # # 0.0 = cursor is not moving, 1.0 = cursor moves instantly
+# smooth_motion_factor = 0.2
+# # 0.0 = broken, 1.0 = cursor shape is unaffected by movement
+# smooth_motion_spring = 0.5
