--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,6 +9,9 @@ set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 set-option -g default-terminal "screen-256color"
+set -g default-terminal "$TERM"
+set -ag terminal-overrides ",$TERM:Tc"
+set -gq allow-passthrough on
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
