--- a/hypr/hyprland/keybinds.conf
+++ b/hypr/hyprland/keybinds.conf
@@ -150,7 +150,7 @@ bind = Ctrl+Alt, Slash, exec, ags run-js 'cycleMode();' # Cycle bar mode (normal
 bindir = Super, Super_L, exec, ags -t 'overview' # Toggle overview/launcher
 bind = Super, Tab, exec, ags -t 'overview' # [hidden]
 bind = Super, Slash, exec, for ((i=0; i<$(hyprctl monitors -j | jq length); i++)); do ags -t "cheatsheet""$i"; done # Show cheatsheet
-bind = Super+Shift, B, exec, ags -t 'sideleft' # Toggle left sidebar
+# bind = Super+Shift, B, exec, ags -t 'sideleft' # Toggle left sidebar
 bind = Super, A, exec, ags -t 'sideleft' # [hidden]
 bind = Super, O, exec, ags -t 'sideleft' # [hidden]
 bind = Super, N, exec, ags -t 'sideright' # Toggle right sidebar
