--- a/hypr/hyprland/colors.conf
+++ b/hypr/hyprland/colors.conf
@@ -1,12 +1,12 @@
-# exec = export SLURP_ARGS='-d -c FFDAD4BB -b 673B3444 -s 00000000'
+# exec = export SLURP_ARGS='-d -c F8DAFFBB -b 58416044 -s 00000000'
 
 general {
-    col.active_border = rgba(F7DCDE39)
-    col.inactive_border = rgba(A58A8D30)
+    col.active_border = rgba(E5E1EC39)
+    col.inactive_border = rgba(928F9F30)
 }
 
 misc {
-    background_color = rgba(1D1011FF)
+    background_color = rgba(13121AFF)
 }
 
 plugin {
@@ -19,16 +19,16 @@ plugin {
         bar_precedence_over_border = true
         bar_part_of_window = true
 
-        bar_color = rgba(1D1011FF)
-        col.text = rgba(F7DCDEFF)
+        bar_color = rgba(13121AFF)
+        col.text = rgba(E5E1ECFF)
 
 
         # example buttons (R -> L)
         # hyprbars-button = color, size, on-click
-        hyprbars-button = rgb(F7DCDE), 13, 󰖭, hyprctl dispatch killactive
-        hyprbars-button = rgb(F7DCDE), 13, 󰖯, hyprctl dispatch fullscreen 1
-        hyprbars-button = rgb(F7DCDE), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
+        hyprbars-button = rgb(E5E1EC), 13, 󰖭, hyprctl dispatch killactive
+        hyprbars-button = rgb(E5E1EC), 13, 󰖯, hyprctl dispatch fullscreen 1
+        hyprbars-button = rgb(E5E1EC), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
     }
 }
 
-windowrulev2 = bordercolor rgba(FFB2BCAA) rgba(FFB2BC77),pinned:1
+windowrulev2 = bordercolor rgba(90D6A1AA) rgba(90D6A177),pinned:1
