--- a/hypr/hyprland/execs.conf
+++ b/hypr/hyprland/execs.conf
@@ -2,6 +2,7 @@
 exec-once = swww-daemon --format xrgb
 exec-once = /usr/lib/geoclue-2.0/demos/agent
 exec-once = ags &
+exec-once = ollama serve
 
 # Input method
 exec-once = fcitx5
