--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -8,9 +8,7 @@ set -g base-index 1
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
-set-option -g default-terminal "screen-256color"
-set -g default-terminal "$TERM"
-set -ag terminal-overrides ",$TERM:Tc"
+set-option -g default-terminal "tmux-256color"
 set -gq allow-passthrough on
 
 set -g @plugin 'tmux-plugins/tpm'
