--- a/hypr/hyprland/general.conf
+++ b/hypr/hyprland/general.conf
@@ -1,9 +1,9 @@
 # MONITOR CONFIG
-monitor=eDP-1,1920x1200@60,1920x0,1
-monitor=HDMI-A-1,1920x1200@60,0x0,1
+monitor=DP-1,2560x1440@165,1920x0,1
+monitor=HDMI-A-1,1920x1080@60,0x360,1
 
-workspace=1,monitor:eDP-1,default:true
-workspace=3,monitor:eDP-1
+workspace=1,monitor:DP-1,default:true
+workspace=3,monitor:DP-1
 workspace=2,monitor:HDMI-A-1,default:true
 workspace=4,monitor:HDMI-A-1
 workspace=0,monitor:HDMI-A-1
@@ -93,12 +93,12 @@ decoration {
         popups_ignorealpha = 0.6
     }
     # Shadow
-    drop_shadow = true
-    shadow_ignore_window = true
-    shadow_range = 20
-    shadow_offset = 0 2
-    shadow_render_power = 4
-    col.shadow = rgba(0000002A)
+    # drop_shadow = true
+    # shadow_ignore_window = true
+    # shadow_range = 20
+    # shadow_offset = 0 2
+    # shadow_render_power = 4
+    # col.shadow = rgba(0000002A)
 
     # Shader
     # screen_shader = ~/.config/hypr/shaders/nothing.frag
