--- a/btop/btop.conf
+++ b/btop/btop.conf
@@ -50,7 +50,7 @@ graph_symbol_net = "default"
 graph_symbol_proc = "default"
 
 #* Manually set which boxes to show. Available values are "cpu mem net proc" and "gpu0" through "gpu5", separate values with whitespace.
-shown_boxes = "net mem cpu proc"
+shown_boxes = "cpu mem net proc"
 
 #* Update time in milliseconds, recommended 2000 ms or above for better sample times for graphs.
 update_ms = 2000
@@ -72,7 +72,7 @@ proc_colors = True
 proc_gradient = True
 
 #* If process cpu usage should be of the core it's running on or usage of the total available cpu power.
-proc_per_core = True
+proc_per_core = False
 
 #* Show process memory as bytes instead of percent.
 proc_mem_bytes = True
@@ -94,11 +94,11 @@ proc_aggregate = False
 
 #* Sets the CPU stat shown in upper half of the CPU graph, "total" is always available.
 #* Select from a list of detected attributes from the options menu.
-cpu_graph_upper = "total"
+cpu_graph_upper = "Auto"
 
 #* Sets the CPU stat shown in lower half of the CPU graph, "total" is always available.
 #* Select from a list of detected attributes from the options menu.
-cpu_graph_lower = "total"
+cpu_graph_lower = "Auto"
 
 #* If gpu info should be shown in the cpu box. Available values = "Auto", "On" and "Off".
 show_gpu_info = "Auto"
