--- a/hypr/hyprland/keybinds.conf
+++ b/hypr/hyprland/keybinds.conf
@@ -117,7 +117,7 @@ bind = Super+Shift, 8, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh 
 bind = Super+Shift, 9, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh movetoworkspacesilent 9 # [hidden]
 bind = Super+Shift, 0, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh movetoworkspacesilent 10 # [hidden]
 
-bind = Ctrl+Super+Shift, Up, movetoworkspacesilent, special # [hidden]
+# bind = Ctrl+Super+Shift, Up, movetoworkspacesilent, special # [hidden]
 
 bind = Ctrl+Super+Shift, Right, movetoworkspace, +1 # [hidden]
 bind = Ctrl+Super+Shift, Left, movetoworkspace, -1 # [hidden]
@@ -138,7 +138,7 @@ bind = Super+Shift, Page_Up, movetoworkspace, -1  # [hidden]
 # bind = Super+Alt, S, movetoworkspacesilent, special
 bind = Super, P, pin
 
-bind = Ctrl+Super, S, togglespecialworkspace, # [hidden]
+# bind = Ctrl+Super, S, togglespecialworkspace, # [hidden]
 bind = Alt, Tab, cyclenext # [hidden] sus keybind
 bind = Alt, Tab, bringactivetotop, # [hidden] bring it to the top
 
