--- a/hypr/hyprland/rules.conf
+++ b/hypr/hyprland/rules.conf
@@ -25,6 +25,7 @@ windowrule=float,title:^(File Upload)(.*)$
 
 windowrule=workspace 2, Google-chrome
 windowrule=workspace 2, firefox
+windowrule=workspace 2, firefox-developer-edition
 windowrule=workspace 3, Code
 windowrule=workspace 4, discord
 windowrule=workspace 4, WebCord
