--- a/hypr/hyprland/rules.conf
+++ b/hypr/hyprland/rules.conf
@@ -1,46 +1,65 @@
-# ######## Window rules ########
-windowrule = noblur,.*
-# windowrule = opacity 0.89 override 0.89 override, .* # Applies transparency to EVERY WINDOW
-windowrule = float, ^(blueberry.py)$
-windowrule = float, ^(steam)$
-windowrule = float, ^(guifetch)$ # FlafyDev/guifetch
+############ Window rules ############
+
+# Make every window (by title) have “noblur”
+windowrulev2 = noblur, title:.*
+
+# Example transparency rule commented out:
+# windowrulev2 = opacity:0.89, title:.*
+
+# Float blueberry.py (assuming “blueberry.py” is the window class):
+windowrulev2 = float, class:^(blueberry\.py)$
+
+# Float steam (class)
+windowrulev2 = float, class:^(steam)$
+
+# Float guifetch
+windowrulev2 = float, class:^(guifetch)$
+
+# Warp – explicitly tile it
 windowrulev2 = tile, class:(dev.warp.Warp)
+
+# Float any Picture-in-Picture window
 windowrulev2 = float, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
-windowrule = center, title:^(Open File)(.*)$
-windowrule = center, title:^(Select a File)(.*)$
-windowrule = center, title:^(Choose wallpaper)(.*)$
-windowrule = center, title:^(Open Folder)(.*)$
-windowrule = center, title:^(Save As)(.*)$
-windowrule = center, title:^(Library)(.*)$
-windowrule = center, title:^(File Upload)(.*)$
 
-# Dialogs
-windowrule=float,title:^(Open File)(.*)$
-windowrule=float,title:^(Select a File)(.*)$
-windowrule=float,title:^(Choose wallpaper)(.*)$
-windowrule=float,title:^(Open Folder)(.*)$
-windowrule=float,title:^(Save As)(.*)$
-windowrule=float,title:^(Library)(.*)$
-windowrule=float,title:^(File Upload)(.*)$
+# Center these matching titles
+windowrulev2 = center, title:^(Open File)(.*)$
+windowrulev2 = center, title:^(Select a File)(.*)$
+windowrulev2 = center, title:^(Choose wallpaper)(.*)$
+windowrulev2 = center, title:^(Open Folder)(.*)$
+windowrulev2 = center, title:^(Save As)(.*)$
+windowrulev2 = center, title:^(Library)(.*)$
+windowrulev2 = center, title:^(File Upload)(.*)$
 
-windowrule=workspace 2, Google-chrome
-windowrule=workspace 2, firefox
-windowrule=workspace 2, firefox-developer-edition
-windowrule=workspace 3, Code
-windowrule=workspace 4, discord
-windowrule=workspace 4, WebCord
-windowrule=workspace 4, vesktop
-windowrule=workspace 4, armcord
-windowrule=workspace 4, org.telegram.desktop
-windowrule=workspace 5, steam
-windowrule=workspace 10, YandexMusic
+# Also float these dialogs
+windowrulev2 = float, title:^(Open File)(.*)$
+windowrulev2 = float, title:^(Select a File)(.*)$
+windowrulev2 = float, title:^(Choose wallpaper)(.*)$
+windowrulev2 = float, title:^(Open Folder)(.*)$
+windowrulev2 = float, title:^(Save As)(.*)$
+windowrulev2 = float, title:^(Library)(.*)$
+windowrulev2 = float, title:^(File Upload)(.*)$
 
-# Tearing
-windowrule=immediate,.*\.exe
-windowrulev2=immediate,class:(steam_app)
+# Send certain apps (by class) to specific workspaces
+windowrulev2 = workspace:2, class:Google-chrome
+windowrulev2 = workspace:2, class:firefox
+windowrulev2 = workspace:2, class:firefox-developer-edition
+windowrulev2 = workspace:3, class:Code
+windowrulev2 = workspace:4, class:discord
+windowrulev2 = workspace:4, class:WebCord
+windowrulev2 = workspace:4, class:vesktop
+windowrulev2 = workspace:4, class:armcord
+windowrulev2 = workspace:4, class:org.telegram.desktop
+windowrulev2 = workspace:5, class:steam
+windowrulev2 = workspace:10, class:YandexMusic
 
-# No shadow for tiled windows
-windowrulev2 = noshadow,floating:0
+# Tearing workaround for *.exe (match window “title” that ends with .exe, or use class if needed)
+windowrulev2 = immediate, title:.*\.exe
+
+# Tearing workaround for steam_app
+windowrulev2 = immediate, class:(steam_app)
+
+# No shadow on tiled windows (i.e. if “floating:0” => not floating => apply “noshadow”)
+windowrulev2 = noshadow, floating:0
 
 # ######## Layer rules ########
 layerrule = xray 1, .*
