lol minor fixes

--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -1,7 +1,7 @@
-# $text_color = rgba(E5E1ECFF)
-# $entry_background_color = rgba(13121A11)
-# $entry_border_color = rgba(928F9F55)
-# $entry_color = rgba(C8C4D6FF)
+# $text_color = rgba(E1E1EFFF)
+# $entry_background_color = rgba(11131C11)
+# $entry_border_color = rgba(8E909F55)
+# $entry_color = rgba(C4C5D6FF)
 $text_color = rgba(FFFFFFFF)
 $entry_background_color = rgba(33333311)
 $entry_border_color = rgba(3B3B3B55)
@@ -11,12 +11,12 @@ $font_family_clock = Rubik Light
 $font_material_symbols = Material Symbols Rounded
 
 background {
-    # color = rgba(0E0D15FF)
-    color = rgba(000000FF)
+    # color = rgba(0C0E17FF)
+    # color = rgba(000000FF)
     # path = {{ SWWW_WALL }}
-    # path = screenshot
-    # blur_size = 5
-    # blur_passes = 4
+    path = screenshot
+    blur_size = 5
+    blur_passes = 4
 }
 input-field {
     monitor =
