--- a/hypr/hyprland/colors.conf
+++ b/hypr/hyprland/colors.conf
@@ -1,12 +1,12 @@
-# exec = export SLURP_ARGS='-d -c F8DAFFBB -b 58416044 -s 00000000'
+# exec = export SLURP_ARGS='-d -c E4DFFFBB -b 48456744 -s 00000000'
 
 general {
-    col.active_border = rgba(E5E1EC39)
-    col.inactive_border = rgba(928F9F30)
+    col.active_border = rgba(E1E1EF39)
+    col.inactive_border = rgba(8E909F30)
 }
 
 misc {
-    background_color = rgba(13121AFF)
+    background_color = rgba(11131CFF)
 }
 
 plugin {
@@ -19,16 +19,16 @@ plugin {
         bar_precedence_over_border = true
         bar_part_of_window = true
 
-        bar_color = rgba(13121AFF)
-        col.text = rgba(E5E1ECFF)
+        bar_color = rgba(11131CFF)
+        col.text = rgba(E1E1EFFF)
 
 
         # example buttons (R -> L)
         # hyprbars-button = color, size, on-click
-        hyprbars-button = rgb(E5E1EC), 13, 󰖭, hyprctl dispatch killactive
-        hyprbars-button = rgb(E5E1EC), 13, 󰖯, hyprctl dispatch fullscreen 1
-        hyprbars-button = rgb(E5E1EC), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
+        hyprbars-button = rgb(E1E1EF), 13, 󰖭, hyprctl dispatch killactive
+        hyprbars-button = rgb(E1E1EF), 13, 󰖯, hyprctl dispatch fullscreen 1
+        hyprbars-button = rgb(E1E1EF), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
     }
 }
 
-windowrulev2 = bordercolor rgba(90D6A1AA) rgba(90D6A177),pinned:1
+windowrulev2 = bordercolor rgba(B6C4FFAA) rgba(B6C4FF77),pinned:1
