--- a/hypr/hyprland/general.conf
+++ b/hypr/hyprland/general.conf
@@ -1,9 +1,9 @@
 # MONITOR CONFIG
-monitor=DP-1,2560x1440@165,1920x0,1
-monitor=HDMI-A-1,1920x1080@60,0x360,1
+monitor=eDP-1,2560x1600@120.00,1920x0,1.333333
+monitor=HDMI-A-1,1920x1200@60,0x400,1
 
-workspace=1,monitor:DP-1,default:true
-workspace=3,monitor:DP-1
+workspace=1,monitor:eDP-1,default:true
+workspace=3,monitor:eDP-1
 workspace=2,monitor:HDMI-A-1,default:true
 workspace=4,monitor:HDMI-A-1
 workspace=0,monitor:HDMI-A-1
@@ -66,7 +66,7 @@ general {
     layout = dwindle
 
     #focus_to_other_workspaces = true # ahhhh i still haven't properly implemented this
-    allow_tearing = true # This just allows the `immediate` window rule to work
+    allow_tearing = false # This just allows the `immediate` window rule to work
 }
 
 dwindle {
@@ -146,9 +146,14 @@ animations {
     animation = specialWorkspace, 1, 3, md3_decel, slidevert
 }
 
+render {
+    direct_scanout = true
+    # explicit_sync = false
+}
+
 misc {
-    vfr = 1
-    vrr = 1
+    vfr = 0
+    vrr = 0
     animate_manual_resizes = false
     animate_mouse_windowdragging = false
     enable_swallow = false
